Textes ok. Manque contraintes

--- a/templates/owlAgency.html.twig
+++ b/templates/owlAgency.html.twig
@@ -30,6 +30,7 @@
         </div>
         </div>
 
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ L'EQUIPE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
 
 
     <div class="section whiteBlock section-our-team" style="padding-bottom:0;">
@@ -56,8 +57,9 @@
                                                     </div>
                                                     <div class="description">
                                                         <h3 class="big-text">Joal</h3>
-                                                        <p class="authorMail small-text">Responsable marketing @HibouQuiGeek</p>
-                                                        <p class="small-text">"J'ai faim"</p>
+                                                        <p class="authorMail small-text" style="margin-bottom:0;">Responsable Marketing</p>
+                                                        <p class="authorMail small-text" style="margin-top:0;">#produmarketing</p>
+                                                        <p class="small-text">"Marketeuse un jour, marketeuse toujours !"</p>
 
                                                     </div>
                                                 </div>
@@ -65,9 +67,9 @@
                                             <div class="card back cardBack card-member card-plain">
                                                 <div class="content">
                                                     <div class="description">
-                                                        <h3 class="big-text">Joal</h3>
-                                                        <p class="small-text">Responsable marketing @HibouQuiGeek</p>
-                                                        <p class="small-text"> eget orci. Aenean eu enim molestie velit scelerisque dapibus. Fusce sit amet quam et ex rutrum volutpat eu id magna.</p>
+                                                        <h3 class="big-text mobileHide">Joal</h3>
+                                                        <p class="small-text mobileHide">Responsable marketing</p>
+                                                        <p class="small-text" style="font-size:17.5px">Toujours à l’affût des nouvelles tendances marketing, j’aime proposer une stratégie personnelle afin de sublimer l’identité de chaque entreprise. Les campagnes paid’Ads et les réseaux sociaux n’ont plus de secret pour moi. Ensemble, nous relèverons les défis qui vous attendent !</p>
 
                                                     </div>
                                                 </div>
@@ -86,7 +88,8 @@
                                                 </div>
                                                 <div class="description">
                                                     <h3 class="big-text">Emmanuelle</h3>
-                                                    <p class="authorMail small-text">Web designer @HibouQuiGeek</p>
+                                                    <p class="authorMail small-text" style="margin-bottom:0;">Design</p>
+                                                    <p class="authorMail small-text" style="margin-top:0;">#specialistedudesign</p>
                                                     <p class="small-text">"Je n'ai pas vu l'heure passer pourtant je surveillais"</p>
 
                                                 </div>
@@ -95,9 +98,9 @@
                                         <div class="card back cardBack card-member card-plain">
                                             <div class="content">
                                                 <div class="description">
-                                                    <h3 class="big-text">Emmanuelle</h3>
-                                                    <p class="small-text">Marketing @Shopify</p>
-                                                    <p class="small-text">Lorem ipsum dolor sit amet, consectetur adipiscing elit. Phasellus et neque sed metus sollicitudin sagittis sit amet eget orci. Aenean eu enim molestie velit scelerisque dapibus. Fusce sit amet quam et ex rutrum volutpat eu id magna.</p>
+                                                    <h3 class="big-text mobileHide">Emmanuelle</h3>
+                                                    <p class="small-text mobileHide">Design</p>
+                                                    <p class="small-text" style="font-size:17.5px">xxx</p>
 
                                                 </div>
                                             </div>
@@ -116,8 +119,11 @@
                                                 </div>
                                                 <div class="description">
                                                     <h3 class="big-text">Sylvie</h3>
-                                                    <p class="authorMail small-text">Développeuse @HibouQuiGeek</p>
-                                                    <p class="small-text">"Pas d'idée pour le moment"</p>
+                                                    <p class="authorMail small-text" style="margin-bottom:0;">Développeuse</p>
+                                                    <p class="authorMail small-text" style="margin-top:0;">#topdudev</p>
+
+
+                                                    <p class="small-text">"Développer, c'est rendre un rêve réel."</p>
 
                                                 </div>
                                             </div>
@@ -125,9 +131,9 @@
                                         <div class="card back cardBack card-member card-plain">
                                             <div class="content">
                                                 <div class="description">
-                                                    <h3 class="big-text">Sylvie</h3>
-                                                    <p class="small-text">Développeuse</p>
-                                                    <p class="small-text" style="font-size:17.5px">Passionnée par les nouvelles technologies, émerveillée par la magie qui s’opère lorsqu'un navigateur traduit les lignes de codes, soucieuse du bien-être de l’internaute, elle utilise des technologies fiables , telles que Symfony, assurant ainsi une parfaite sécurité à chacun de ses projets.</p>
+                                                    <h3 class="big-text mobileHide">Sylvie</h3>
+                                                    <p class="small-text mobileHide">Développeuse</p>
+                                                    <p class="small-text" style="font-size:17.5px">Passionnée par les nouvelles technologies, émerveillée par la magie qui s’opère lorsqu'un navigateur traduit les lignes de codes, soucieuse du bien-être de l’internaute, j'utilise des technologies fiables , telles que Symfony, assurant ainsi une parfaite sécurité à chacun de mes projets.</p>
 
                                                 </div>
                                             </div>
@@ -142,6 +148,7 @@
         </div>
     </div>
 
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ QUELQUES CHIFFRES CLE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
 
     <div class="beigeBlock section section-card-blog">
         <div class="container">
@@ -188,6 +195,8 @@
 
         </div>
     </div>
+
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
 
 
 
