--- a/templates/owlReferences.html.twig
+++ b/templates/owlReferences.html.twig
@@ -29,6 +29,8 @@
     </div>
 </div>
 
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ LIENS VERS SITES EXTERIEURS ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
+
 
 <div class="section whiteBlock specialization" style="padding-top:70px;">
     <div class="container">
@@ -59,7 +61,7 @@
                             </div>
 
                             <div class="col-md-3 col-sm-4">
-                                <img src="../assets/img/liensite4.jpg" class="imgService  image-header">
+                                <a aria-label="Lien extérieur vers le site internet" href="http://colombes-culture.com/"><img src="../assets/img/colombes.png" class="imgService  image-header"></a>
                             </div>
 
                         </div>
@@ -86,6 +88,7 @@
         </div>
     </div>
 </div>
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ L'AVIS DES CLIENTS~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
 
 <div class="section blueBlock" style="padding-top:70px;">
     <div class="container">
@@ -181,6 +184,9 @@
     </div>
 </div>
 
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ EXEMPLES D'ACCESSIBILITE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
+
+
 <div class="section beigeBlock" style="padding:50px;">
 
 
@@ -221,6 +227,9 @@
 </div>
 
 {% endblock %}
+
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
+
 
 {% block javascripts %}
 
