--- a/templates/owlServices.html.twig
+++ b/templates/owlServices.html.twig
@@ -8,8 +8,6 @@
 
 
     <div class="section yellowBlock section-our-team">
-        {#<div class="container">#}
-            <!--<div class="text-area">-->
             <h1>Nos services</h1>
 
             <div class="title-area">
@@ -17,7 +15,6 @@
                     <div class="separator separator-danger">♦</div>
 
                 </div>
-            <!--</div>-->
             <div class="team2 divServiceBlock">
                 <div class="row">
                     <div class="col-md-10 col-md-offset-1">
@@ -55,6 +52,8 @@
             <!-- end team -->
         {#</div>#}
     </div>
+
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ SAVOIR FAIRE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
 
 
 <div class="section whiteBlock specialization">
@@ -212,5 +211,7 @@
         </div>
     </div>
 </div>
+
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
 
 {% endblock %}
