--- a/public/assets/css/material-dashboard.css
+++ b/public/assets/css/material-dashboard.css
@@ -171,10 +171,10 @@ a:hover {
   text-decoration: underline;
 }
 
-a:not([href]):not([tabindex]) {
-  color: inherit;
-  text-decoration: none;
-}
+/*a:not([href]):not([tabindex]) {*/
+  /*color: inherit;*/
+  /*text-decoration: none;*/
+/*}*/
 
 /*a:not([href]):not([tabindex]):hover,*/
 /*a:not([href]):not([tabindex]):focus {*/
@@ -575,10 +575,10 @@ a:hover {
   text-decoration: underline;
 }
 
-a:not([href]):not([tabindex]) {
-  color: inherit;
-  text-decoration: none;
-}
+/*a:not([href]):not([tabindex]) {*/
+  /*color: inherit;*/
+  /*text-decoration: none;*/
+/*}*/
 
 /*a:not([href]):not([tabindex]):hover,*/
 /*a:not([href]):not([tabindex]):focus {*/
