--- a/public/assets/css/owl.css
+++ b/public/assets/css/owl.css
@@ -463,7 +463,7 @@ a:hover {
     margin-bottom: 20px;
 }
 .card-member .content {
-    padding: 25px;
+    padding: 20px;
     /*border: 2px solid rgba(17, 52, 65, .4);*/
     border-radius: 8px;
     margin-right: 15px;
@@ -722,6 +722,18 @@ input.form-control::placeholder {
     text-align: left;
 }
 
+.blogResume h3 {
+    margin-top: 50px;
+    text-align: left;
+    color:#000000;
+}
+
+.blogResume h2 {
+    margin-top: 50px;
+    text-align: left;
+    color:#000000;
+}
+
 .blogTitleText {
     position: relative;
     text-align: center;
@@ -771,7 +783,7 @@ input.form-control::placeholder {
 
 
 .authorMail {
-    margin-top:40px;
+    margin-top:30px;
 }
 
 .blogResume {
@@ -1499,4 +1511,26 @@ a.lastActionBtn:hover {
 
 .mentions p, .mentions h3 {
     color: #000000;
+}
+
+.blueBlock a {
+    color: #ffffff;
+}
+
+.link {
+    cursor: pointer;
+}
+
+@media (max-width: 1205px) {
+    .mobileHide {
+        display: none;
+    }
+}
+
+.artHomeText a, .artHomeText a:hover, .artHomeText a:active, .artHomeText a:focus{
+    color: #000000;
+}
+
+.articleTitle {
+    margin-top: 70px;
 }
