--- a/templates/adminArticle.html.twig
+++ b/templates/adminArticle.html.twig
@@ -17,33 +17,6 @@
 
     {{ parent() }}
 
-    {#<div class="team"  style="text-align:center;margin-top:50px;">#}
-        {#<div class="row">#}
-
-            {#<!-- end team -->#}
-            {#<div class="col-md-8 col-md-offset-2 text-center" style="height:60px;">#}
-                {#<div class="col-md-4 text-center">#}
-                    {#<a aria-label="Atteindre la page prospects" class="btn btn-fill btn-owl"  href={{ path('adminProspect')}}>#}
-                        {#Gestion des prospects#}
-                    {#</a>#}
-                {#</div>#}
-                {#<div class="col-md-4 text-center">#}
-                    {#<a aria-label="Atteindre la page gestion articles" class="btn btn-fill btn-owl" href={{ path('adminArticle')}}>#}
-                        {#Gestion des articles#}
-                    {#</a>#}
-                {#</div>#}
-                {#<div class="col-md-4 text-center">#}
-                    {#<a  aria-label="Atteindre la page création utilisateurs" class="btn btn-fill btn-owl" href={{ path('registrationUser')}}>#}
-                        {#Création d'un utilisateur#}
-                    {#</a>#}
-                {#</div>#}
-            {#</div>#}
-        {#</div>#}
-    {#</div>#}
-
-    {#<div class = "whiteBlock" style="padding-top:70px;">#}
-    {#<div>#}
-
     <div class="articleAdmin container col-lg-8 col-lg-offset-2" style="background-color:white;padding:30px 40px;border-radius:8px;margin-top:10px;margin-bottom:40px;">
 
 
@@ -53,16 +26,16 @@
             </a>
         </div>
 
+        {# Pour chaque article, affichage d'une div #}
+
         {% for article in articles %}
 
 
                 <div class="articleText">
 
                 <p>
-                    {#<a  href="{{ path('owlBlogDisplay',{'art':article.id}) }}" class="btn btn-fill btn-owl" style="padding:14px 15px;">Voir l'article</a>#}
 
                     <a class="glyphicon glyphicon-pencil link articleUpdate" style="margin-right:10px; margin-left:10px;" id="up{{ article.id }}" href="{{ path('articleFormDisplay',{'art':article.id}) }}"></a>
-                    {#<span class="glyphicon glyphicon-pencil link articleUpdate" id="up{{ article.id }}"></span>#}
                     <span class="glyphicon glyphicon-trash link articleTrash" id="tr{{ article.id }}"></span>
 
                 </p>
