--- a/templates/owlBlog.html.twig
+++ b/templates/owlBlog.html.twig
@@ -19,15 +19,6 @@
             {% endif %}
         {% endfor %}
 
-        {#{% set url = app.request.uri %}#}
-
-        {#{% set descript = thisArt.text|striptags %}#}
-
-
-
-    {#{% block stylesheets2 %}#}
-        {#<meta name="description" content = {{ descript }}>#}
-    {#{% endblock %}#}
 
 
 
@@ -40,11 +31,6 @@
             {background-color:#113441;}
         </style>
 
-        {#<meta property="og:url"           content={{ url }} />#}
-        {#<meta property="og:type"          content="website" />#}
-        {#<meta property="og:title"         content="géraldin deux" />#}
-        {#<meta property="og:description"   content={{ descript }} />#}
-        {#<meta property="og:image"         content="http://www.hibou.helvie.fr/assets/img/persons/530753870c57093287299396c3b0393b.jpeg" />#}
     {% endblock %}
 
     {% block logo %}
@@ -72,7 +58,8 @@
 
         <div class="section blueBlock section-our-team">
 
-            <div class="container">
+            <div class="container articleTitle">
+
 
                 <h1>{{ thisArt.title }}</h1>
 
@@ -80,39 +67,13 @@
 
         </div>
 
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BLOC ARTICLE ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
+
+
         <div class="section blueBlock section-our-team oneArticle" style="padding-bottom:0;">
-            {#{{ app.request.uri }}#}
-
-            {#<div class="fb-share-button" data-href={{ app.request.uri }}#}
-                 {#data-layout="button" data-size="small" data-mobile-iframe="true"><a target="_blank"#}
-                 {#href="https://www.facebook.com/sharer/sharer.php?u=http%3A%2F%2Flocalhost%3A8000%2FowlBlogDisplay&amp;src=sdkpreparse"#}
-                {#class="fb-xfbml-parse-ignore">Partager</a></div>#}
-
 
             <div class="row">
                 <div class="col-md-12">
-
-                    {#<!-- Load Facebook SDK for JavaScript -->#}
-                    {#<div id="fb-root"></div>#}
-
-                    {#<!-- Your share button code -->#}
-                    {#<div class="fb-share-button"#}
-                         {#data-href={{ url }}#}
-                         {#data-layout="button_count">#}
-                    {#</div>#}
-
-                    {#<div>#}
-                        {#<!-- Facebook -->#}
-                        {#<a target="_blank" title="Facebook" href="https://www.facebook.com/sharer.php?u="{{ url }} rel="nofollow" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=500,width=700');return false;"><img src="assets/img/logo33.png" alt="Facebook" /></a>#}
-                        {#<!-- //Facebook -->#}
-
-                        {#<!-- Twitter -->#}
-                        {#<a target="_blank" title="Twitter" href="https://twitter.com/share?url=https://bit.ly/2sI7H3v" rel="nofollow" onclick="javascript:window.open(this.href, '', 'menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=400,width=700');return false;"><img src="assets/img/logo33.png" alt="Twitter" /></a>#}
-                        {#<!-- //Twitter -->#}
-
-                        {#<!-- Linkedin -->#}
-                        {#<a target="_blank" title="Linkedin" href="https://www.linkedin.com/shareArticle?mini=true&amp;url="{{ url }} rel="nofollow" onclick="javascript:window.open(this.href, '','menubar=no,toolbar=no,resizable=yes,scrollbars=yes,height=450,width=650');return false;"><img src="assets/img/logo33.png" alt="Linkedin" /></a>#}
-                        {#<!-- //Linkedin -->#}
 
                         <div class="col-md-9 whiteBlock blogResume" style="text-align:justify">
                         {{ thisArt.text|raw }}
@@ -132,7 +93,15 @@
                                     <p class="small-text" style="text-align:center;">{{ thisArt.role }}</p>
                                     <p class="small-text" style="text-align:center;">
                                     {% for tag in thisArt.categories %}
+                                        {% if loop.index == 1 %}
                                         {{ tag.name }}
+                                        {% endif %}
+                                    {% endfor %}
+                                        ♦
+                                    {% for tag in thisArt.categories %}
+                                        {% if loop.index == 2 %}
+                                            {{ tag.name }}
+                                        {% endif %}
                                     {% endfor %}
                                     </p>
                                 </div>
@@ -146,6 +115,9 @@
             </div>
         {#</div>#}
 </div>
+
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BOUTONS RESEAUX SOCIAUX ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
+
         <div class="whiteBlock networksIconBlock">
 
             <div class="row">
@@ -179,17 +151,6 @@
                     <img alt="..." src="../assets/img/logoLinkedin.png"/>
                     </a>
                 </div>
-                    {#<div class="fb-share-button" data-href="http://www.hibou.helvie.fr/owlBlogDisplay" data-layout="button" data-size="small" data-mobile-iframe="true">#}
-                        {#<a target="_blank"#}
-                           {#href="https://www.facebook.com/sharer/sharer.php"#}
-                           {#class="fab fb-xfbml-parse-ignore">#}
-                            {#<img alt="partage article sur facebook" src="../assets/img/logoFacebook.png"/></a></div>#}
-                    {#<div id="fb-root"></div>#}
-
-
-
-
-                    {#</div>#}
 
             </div>
                 </div>
@@ -210,26 +171,11 @@
                 </div>
             </div>
             </div>
-            {#<div class="col-md-12 text-center">#}
-                {#<div class="col-md-4 col-md-offset-4 text-center" >#}
-                {#<div style="height:170px;padding:60px;" >#}
-                    {#<div style="float:left;">#}
-                        {#<button type="button" class="btn btn-fill btn-owl">#}
-                            {#Subscribe#}
-                        {#</button>#}
-                    {#</div>#}
-                    {#<div style="float:right">#}
-                        {#<button type="button" class="btn btn-fill btn-owl">#}
-                            {#Subscribe#}
-                        {#</button>#}
-                    {#</div>#}
-                    {#<div style="float:none;clear:both;">#}
-                    {#</div>#}
-                {#</div>#}
-                {#</div>#}
-            {#</div>#}
 
         </div>
+
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BLOC TOUS LES ARTICLES ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
+
 
 <div class="yellowBlock blogArticles">
 {#<div class="section">#}
@@ -325,6 +271,73 @@
 
 </div>
 
+{#~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~ BLOC NEWSLETTER ~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~#}
+
+        <div class="whiteBlock section" style="padding-top:50px;">
+            <div class="container">
+                <div class="title-area">
+                    <h2>Recevez tous nos informations</h2>
+                </div>
+
+                <div class="container">
+                    <div class="formBlock contactForm1">
+                        <div class="col-lg-6 col-md-6 col-sm-8 col-xs-10 col-lg-offset-3 col-md-offset-3 col-sm-offset-2 col-xs-offset-1">
+                            <div class="card1">
+
+                                <div class="card1-header card1-header-rose card1-header-icon">
+                                    <div class="card1-icon">
+                                        <i class="material-icons" style="color:#113441">mail_outline</i>
+                                    </div>
+                                </div>
+
+                                <div class="card1-body ">
+
+                                    <div id="mc_embed_signup">
+
+                                        <form action="https://helvie.us19.list-manage.com/subscribe/post?u=6ec326037cb371ea154dace87&amp;id=86e90caefa"
+                                              method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class=" form-group validate" target="_blank" novalidate>
+                                            <div id="mc_embed_signup_scroll">
+
+                                                <div class="mc-field-group">
+                                                    <label for="mce-FNAME">Nom </label>
+                                                    <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME">
+                                                </div>
+
+                                                <div class="mc-field-group">
+                                                    <label for="mce-EMAIL">Email<span class="asterisk">*</span>
+                                                    </label>
+                                                    <input  type="email" value="" name="EMAIL" class="required email form-control" id="mce-EMAIL">
+                                                </div>
+
+                                                <div id="mce-responses" class="clear">
+                                                    <div class="response" id="mce-error-response" style="background-color:yellow;display:none"></div>
+                                                    <div class="response" id="mce-success-response" style="display:none"></div>
+                                                </div>
+
+                                                <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_6ec326037cb371ea154dace87_86e90caefa" tabindex="-1" value=""></div>
+                                                <div class="clear" style="display:none"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+
+                                            </div>
+
+                                        </form>
+                                    </div>
+
+                                    <div class="card1-footer ">
+                                        <button aria-label="Validation inscription à la newsletter" id="falseButton" class="form-control btn btn-fill btn-rose">Je m'inscris</button>
+                                    </div>
+
+
+                                </div>
+
+
+
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+
 
 
 
@@ -334,6 +347,9 @@
 
     {{ parent() }}
     <script src="assets/js/plugins/bootstrap-selectpicker.js" ></script>
+    <script type='text/javascript' src='//s3.amazonaws.com/downloads.mailchimp.com/js/mc-validate.js'></script>
+    <script src="{{ asset('assets/js/Nl.js') }}"></script>
+
 
     {#<script>(function(d, s, id) {#}
             {#var js, fjs = d.getElementsByTagName(s)[0];#}
