--- a/templates/owlBlog.html.twig
+++ b/templates/owlBlog.html.twig
@@ -300,7 +300,7 @@
 
                                                 <div class="mc-field-group">
                                                     <label for="mce-FNAME">Nom </label>
-                                                    <input type="text" value="" name="FNAME" class="form-control" id="mce-FNAME">
+                                                    <input type="text" value="" name="FNAME" class="required form-control" id="mce-FNAME">
                                                 </div>
 
                                                 <div class="mc-field-group">
