--- a/templates/owlServices.html.twig
+++ b/templates/owlServices.html.twig
@@ -73,19 +73,19 @@
 
                         <div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-sm-6 col-xs-12">
                                 <img src="../assets/img/imgMark.png" class="imgService markOpen image-header link">
                             </div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-sm-6 col-xs-12">
                                 <img src="../assets/img/imgDev.png" class="imgService devOpen image-header link">
                             </div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-sm-6 col-xs-12">
                                 <img src="../assets/img/imgDesign.png" class="imgService designOpen image-header link">
                             </div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-sm-6 col-xs-12">
                                 <img src="../assets/img/imgAudit.png" class="imgService auditOpen image-header link">
                             </div>
                         </div>
@@ -106,15 +106,15 @@
 
 
                             <div class="row">
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img src="../assets/img/speMark1.png" class="markImg markImg2 image-header">
                             </div>
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img src="../assets/img/speMark2.png" class="markImg markImg2 image-header">
                             </div>
 
-                            <div class="col-md-4 speDescriptive">
+                            <div class="col-md-4 col-sm-6 col-xs-12 speDescriptive">
                                 <img src="../assets/img/speMark3.png" class="markImg image-header">
                             </div>
 
