--- a/templates/owlReferences.html.twig
+++ b/templates/owlReferences.html.twig
@@ -44,23 +44,23 @@
 
                         <div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-xs-12">
                                 <a aria-label="Lien extérieur vers le site internet" href="http://bienvenueachampssurmarne.com"><img src="../assets/img/liensiteJoal1.png" class="imgService  image-header"></a>
                             </div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-xs-12">
                                 <a aria-label="Lien extérieur vers le site internet"  href="http://www.asso.helvie.fr"><img src="../assets/img/liensite1.png" class="imgService  image-header"></a>
                             </div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-xs-12">
                                 <a aria-label="Lien extérieur vers le site internet" href="http://www.projet4.helvie.fr"><img src="../assets/img/liensite2.png" class="imgService  image-header"></a>
                             </div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-xs-12">
                                 <a aria-label="Lien extérieur vers le site internet" href="http://jduverly.com/"><img src="../assets/img/liensiteJoal2.png" class="imgService  image-header"></a>
                             </div>
 
-                            <div class="col-md-3 col-sm-4">
+                            <div class="col-md-3 col-xs-12">
                                 <a aria-label="Lien extérieur vers le site internet" href="http://colombes-culture.com/"><img src="../assets/img/colombes.png" class="imgService  image-header"></a>
                             </div>
 
@@ -198,6 +198,7 @@
 
             <div class="col-md-10 col-md-offset-1 accessButton">
 
+                    <div class="col-md-10 col-sm-12">
 
                     <button aria-label="Afficher l'image exemple pour atteints de parkinson"   style="float:left;margin-right:20px;" type="button" id="sightProblemButton" class="btn btn-fill btn-owl accessBtn">
                         Parkinson
@@ -210,11 +211,13 @@
                     <button aria-label="Afficher l'image exemple pour atteints de dyslexie"  style="float:left" type="button" id="dyslexicButton" class="btn btn-fill btn-owl accessBtn">
                         Dyslexie
                     </button>
+            </div>
+                    <div class="col-md-2 col-sm-12 normalImg">
 
-                    <button aria-label="Afficher l'image de base"  style="float:right; margin-left:20px;" type="button" id="normalButton" class="btn btn-fill btn-owl accessBtn">
-                        Retour
+                    <button aria-label="Afficher l'image de base" type="button" id="normalButton" class="btn btn-fill btn-owl accessBtn">
+                        Vision normale
                     </button>
-
+                    </div>
         </div>
 
         <div class="col-md-10 col-md-offset-1">
